# memcached-cli

./: Cargo.toml  README.md
src/: main.rs
src/commands/: get.rs  mod.rs  noop.rs  quit.rs  set.rs
