[package]
name = "memcached-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
memcached-rs = { version = "0.4.1" }
dialoguer = { version = "0.10.4" }